--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "Base app for GoogleBook React App",
   "main": "server.js",
   "scripts": {
-    "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
+    "tailwind:css": "tailwind build src/css/tailwind.src.css -c  tailwind.js -o src/css/tailwind.css",
+    "start": "npm run tailwind:css && if-env NODE_ENV=production && npm run start:prod || react-scripts start",
+    "build": "npm run tailwind:css && cd client && react-scripts build",
     "start:prod": "node server.js",
     "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
     "client": "cd client && npm run start",
     "install": "cd client && npm install",
-    "build": "cd client && npm run build",
     "heroku-postbuild": "npm run build"
   },
   "author": "Peter A",
@@ -21,6 +22,10 @@
   "dependencies": {
     "dotenv": "^8.0.0",
     "express": "^4.16.3",
-    "if-env": "^1.0.4"
+    "if-env": "^1.0.4",
+    "mongoose": "^5.6.0",
+    "path": "^0.12.7",
+    "react-router-dom": "^5.0.1",
+    "tailwindcss": "^1.0.4"
   }
 }
