--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "client": "cd client && npm run start",
     "install": "cd client && npm install",
     "build": "cd client && react-scripts build",
-    "heroku-postbuild": "npm run build"
+    "heroku-postbuild": "cd client && npm install && npm run build"
   },
   "author": "Peter A",
   "license": "ISC",
