--- a/client/package.json
+++ b/client/package.json
@@ -4,13 +4,11 @@
   "private": true,
   "proxy": "http://localhost:3001/",
   "dependencies": {
+    "axios": "^0.18.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1",
     "react-router-dom": "^4.3.1",
-    "axios": "^0.18.0"
-  },
-  "devDependencies": {
+    "react-scripts": "3.0.1",
     "tailwindcss": "^1.0.4"
   },
   "scripts": {
